<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:id="@+id/lista_tranzactii">
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tr_numeclient"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/nume_client"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/tr_nrLuniContract"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/numar_luni_contract" />

            <TextView
                android:id="@+id/tr_tipapartament"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/tipul_apartamentului" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tr_stradaApartament"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:gravity="center"
                android:hint="@string/locatia" />

            <TextView
                android:id="@+id/tr_numarBloc"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:gravity="center"
                android:hint="@string/numar_bloc" />

            <TextView
                android:id="@+id/tr_scaraBloc"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:hint="@string/scara_bloc" />

            <TextView
                android:id="@+id/tr_numarApartament"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:gravity="center"
                android:hint="@string/numar_apartament" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/tr_pretChirieApar"
                android:layout_width="55dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:gravity="left|center"
                android:hint="@string/pret"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"></TextView>

            <TextView
                android:id="@+id/valuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unitate_masura"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>


