<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout

        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        android:id="@+id/lista_libere">
        <LinearLayout
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tipulApar"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/tipul_apartamentului"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/disponibilitate"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:gravity="center"
                android:hint="@string/disponibilitate"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/locatiaApr"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                android:hint="@string/locatia" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="125dp"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/structuraApar"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:gravity="center"
                android:hint="@string/structura_apartamentului" />

            <TextView
                android:id="@+id/anblocApar"
                android:layout_width="match_parent"
                android:layout_height="43dp"
                android:gravity="center"
                android:hint="@string/anul_infiintarii_blocului" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/suprafataApar"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:layout_marginRight="5dp"
                    android:hint="@string/suprafata_fara_mp">
                </TextView>

                <TextView
                    android:id="@+id/unitateMasura"
                    android:layout_width="30dp"
                    android:layout_height="48dp"
                    android:gravity="center"
                    android:text="mp" />
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal"
            >


            <TextView
                android:id="@+id/pretChirieApar"
                android:layout_width="55dp"
                android:layout_height="38dp"
                android:gravity="left|center"
                android:hint="@string/pret"
                android:textColor="@color/colorAccent"
                android:textSize="20dp"
                android:layout_marginLeft="10dp">
            </TextView>

            <TextView
                android:id="@+id/valuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/unitate_masura"
                android:textSize="20dp"/>
        </LinearLayout>

    </LinearLayout>


</LinearLayout>


